[package]
name = "blogear_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "set-header", "normalize-path", "compression-gzip"] }
